# eol-trait-harvester

./: .gitignore  .pre-commit-config.yaml  README.md  __init__.py  pyproject.toml  requirements.txt  setup.cfg  tox.ini
.github/: dependabot.yml
.github/workflows/: tox.yml
coding/: gbif_eol_mapping.py
coding/eol_provider_mapping/: README eol-extraction.txt  README eol_provider_mapping.txt  eol_traits_direx.py  eol_traits_direx_testing.py  gbif_eol_mapping.py  gbif_eol_mapping_fct.py  gbif_eol_mapping_pandas.py
coding/eol_provider_mapping/drafts/: eol_ext.py  eol_trait_data.py  eol_trait_data2.py  gbif_eol_mapping_pandas.py  mapping_draft_pandas.py  mapping_pandas_fct.py  pd_gbif_eol_mapping.py  pytest_file.py  t_gbif_eol_mapping.py
eol/: EncyclopediaOfLife.py  __init__.py  data.py  handlers.py  normalization.py  triple_generator.py  triplegenerator.py  variables.py
src/eol/: __init__.py  conversions.py  data.py  handlers.py  normalization.py  triple_generator.py  variables.py
src/eol_trait_harvester.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: commons.py  conftest.py  test_EncyclopediaOfLiveProcessing.py  test_EolTraitApiHandler.py  test_EolTraitCsvHandler.py  test_IdentifierConverter.py  test_Normalizer.py  test_TripleGenerator.py
tests/data/: test_eol_traits.csv  test_provider_ids.csv
