[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "eol-trait-harvester"
description = "A harvester to gather trait data from EOL"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "AGPLv3"}
classifiers = [
    "Programming Language :: Python :: 3"
]
dependencies = [
    "requests~=2.0",
    "pandas~=1.0"
]
version = "1.0.0"

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests*"]

[project.optional-dependencies]
dev = [
    "pytest~=7.1",
    "black",
    "python-dotenv~=0.20",
    "isort"
]