[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "eol-trait-harvester"
description = "A harvester to gather trait data from EOL"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "AGPLv3"}
classifiers = [
    "Programming Language :: Python :: 3"
]
dependencies = [
    "requests~=2.0",
    "pandas~=1.0"
]
version = "1.0.1"

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests*"]

[project.optional-dependencies]
dev = [
    "pytest~=7.1",
    "python-dotenv~=0.20",

    "pre-commit",
    "black",
    "isort",
    "flake8",
    "flake8-bugbear",
    "pylint",

    # Security
    "safety",
    "bandit",
]

[tool.mypy]
ignore_missing_imports = true
warn_unused_configs = true
show_error_codes = true

[tool.pylint]
ignore-patterns = [
    "test_.*?py",
    "conftest.py",
]
ignore-paths = [
    "^tests/resources/.*$"
]

good-names = [
    "db",
    "df"
]

[tool.isort]
profile = "black"
